# BugEngine

./: Cargo.toml
crates/age-agent/: Cargo.toml
crates/age-agent/src/: checkpoint.rs  lib.rs  orchestrator.rs  safety.rs
crates/age-agent/src/tools/: level.rs  mod.rs  ui.rs
crates/age-core/: Cargo.toml
crates/age-core/src/: lib.rs
crates/age-core/src/project/: io.rs  mod.rs
crates/age-core/src/schema/: mod.rs  transform.rs  ui.rs  validate.rs  world3d.rs
crates/age-core/src/tool/: context.rs  mod.rs  protocol.rs  registry.rs
crates/age-export/: Cargo.toml
crates/age-export/src/: html.rs  lib.rs  main.rs  targets.rs
crates/age-runtime/: Cargo.toml
crates/age-runtime/examples/: runtime_native.rs
crates/age-runtime/src/: game_app.rs  game_loop.rs  input.rs  lib.rs  mesh_builtin.rs  physics_simple.rs  player_controller.rs  renderer3d.rs  scene_loader.rs  vertex.rs  wasm.rs
crates/age-runtime/src/renderer3d/: gpu.rs
docs/superpowers/plans/: 2026-05-22-agent-game-engine-3d-first.md
docs/superpowers/specs/: 2026-05-22-agent-game-engine-3d-first-design.md
runtime-web/: .gitignore  bootstrap.js  index.html
templates/default-project/: project.json
templates/default-project/scenes/: main.scene.json
templates/default-project/ui/: hud.ui.json
