[package]
name = "age-export"
version.workspace = true
edition.workspace = true

[[bin]]
name = "age-export"
path = "src/main.rs"

[dependencies]
age-core = { path = "../age-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"