[package]
name = "age-runtime"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
native = ["dep:winit", "dep:pollster"]

[dependencies]
age-core = { path = "../age-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
wgpu = "24"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
winit = { version = "0.30", optional = true }
pollster = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
    "KeyboardEvent",
    "MouseEvent",
    "EventTarget",
    "DomRect",
    "Performance",
    "WebGl2RenderingContext",
    "console",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "runtime_native"
path = "examples/runtime_native.rs"
required-features = ["native"]
